使用 Colaboratory 建立

--- a/matplotlib2.ipynb
+++ b/matplotlib2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "matplotlib.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,66 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/chihsuanbjjh/binder/blob/master/matplotlib2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gzV7Aoueuo5H",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "fd1f4e24-7bd6-472c-e9ca-12a8cc631b2b"
+      },
+      "source": [
+        "print('hello')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yjO0cHbVvWiO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e39671ed-f22f-4855-9039-53cb1f229508"
+      },
+      "source": [
+        "print('hello2')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
